Fxied some layout issues in the footer and  make the contact section bigger

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -4,16 +4,17 @@
 }
 
 .footer-container {
+    box-sizing: border-box;
     display: flex;
     justify-content: left;
     align-items: center;
     width: 100%;
-    padding-bottom: var(--bottom-bar-height);
     height: calc(var(--bottom-bar-height) * 2);
     background-image: linear-gradient(to right,
             rgba(205, 255, 216, 1) 0%,
             rgba(101, 232, 235, 1) 50%,
-            rgba(188, 163, 255, 1) 100%)
+            rgba(188, 163, 255, 1) 100%);
+    transform: translateY(-3rem);
 }
 
 .footer-name {
@@ -30,12 +31,12 @@
         justify-content: center;
         align-items: center;
         width: 100%;
-        bottom: 0;
-        height: calc(var(--bottom-bar-height) * 2);
+        height: var(--bottom-bar-height-web);
         background-image: linear-gradient(to right,
                 rgba(205, 255, 216, 1) 0%,
                 rgba(101, 232, 235, 1) 50%,
-                rgba(188, 163, 255, 1) 100%)
+                rgba(188, 163, 255, 1) 100%);
+        transform: translateY(3rem);
     }
     
     .footer-container .footer-name {
